# foxwall

./: .editorconfig  README.md  conftest.py  db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  setup.cfg
backend/core/serializer_fields/: __init__.py  user.py
backend/core/validators/: __init__.py  post.py
backend/follow/: admin.py  models.py  serializers.py  urls.py  views.py
backend/follow/migrations/: 0001_initial.py
backend/follow/test/: test_models.py  test_views.py
backend/follow/utils/: __init__.py
backend/foxwall_api/: asgi.py  settings.py  urls.py
backend/foxwall_api/settings/: base.py  common.py
backend/like/: models.py  views.py
backend/like/migrations/: 0001_initial.py
backend/like/test/: test_models.py  test_views.py
backend/like/utils/: crud.py
backend/post/: admin.py  models.py  serializers.py  urls.py  views.py
backend/post/migrations/: 0002_alter_post_text.py  0003_auto_20210920_1411.py
backend/post/test/: test_utils.py  test_views.py
backend/post/utils/: crud.py
backend/tests/: client.py  fixtures.py  helpers.py
backend/user/: admin.py  backends.py  models.py  serializers.py  urls.py
backend/user/migrations/: 0002_auto_20210730_2244.py  0003_auto_20210730_2310.py  0005_auto_20210810_1301.py
backend/user/test/: test_models.py
backend/user/test/views/: test_auth.py  test_authenticated.py  test_followers.py  test_users.py
backend/user/utils/: __init__.py  follow_request.py  generate.py
backend/user/views/auth/: serializers.py  views.py
(+45 files in other folders)
