[tool.poetry]
name = "foxwall_api"
version = "0.1.0"
description = ""
authors = ["ümit demir <umitde296@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "=3.2.2"
Pillow = "^8.3.1"
django-imagekit = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
